--- a/app/src/main/res/layout/activity_bproposal_detail.xml
+++ b/app/src/main/res/layout/activity_bproposal_detail.xml
@@ -1,13 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_bproposal_detail"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_bcampaign_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sap.josh0207.sap2016.BProposalDetailActivity">
+    tools:context="com.sap.josh0207.sap2016.BCampaignDetailActivity"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/proposal_detail_toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="@android:color/white"
+        android:background="?attr/colorPrimary">
+    </android.support.v7.widget.Toolbar>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="55dp"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:padding="10dp"/>
+
+            <TextView
+                android:id="@+id/inf_fb_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:textColor="#0000ff"
+                android:padding="10dp"/>
+
+            <ImageView
+                android:id="@+id/FB_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
+            </ImageView>
+
+            <TextView
+                android:id="@+id/proposal_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:padding="10dp"/>
+
+            <ImageView
+                android:id="@+id/proposal_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp">
+            </ImageView>
+
+            <TextView
+                android:id="@+id/proposal_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:padding="10dp"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Approve"
+                android:textSize="18dp"
+                android:textColor="#000"
+                android:id="@+id/approve"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Reject"
+                android:textSize="18dp"
+                android:textColor="#000"
+                android:id="@+id/reject"/>
+
+
+        </LinearLayout>
+    </ScrollView>
+
 
 </RelativeLayout>
