--- a/app/src/main/res/layout/proposal_row.xml
+++ b/app/src/main/res/layout/proposal_row.xml
@@ -12,13 +12,41 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/proposal_price"
+            android:id="@+id/tv_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textColor="#000"
             android:textStyle="bold"
             android:padding="10dp"/>
+
+        <ImageView
+            android:id="@+id/fb_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+        </ImageView>
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:padding="10dp"/>
+
+        <TextView
+            android:id="@+id/proposal_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:padding="5dp"/>
 
         <ImageView
             android:id="@+id/proposal_image"
