--- a/app/src/main/res/layout/fragment_inf_proposal.xml
+++ b/app/src/main/res/layout/fragment_inf_proposal.xml
@@ -1,13 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sap.josh0207.sap2016.fragment.InfProposalFragment">
+    tools:context="com.sap.josh0207.sap2016.fragment.BrandProposalListFragment"
+    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner_category" />
+    </RelativeLayout>
+
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+        android:layout_height="fill_parent"
+        android:id="@+id/iProposal_list"></android.support.v7.widget.RecyclerView>
+</LinearLayout>
