--- a/app/src/main/res/layout/activity_bproposal_detail.xml
+++ b/app/src/main/res/layout/activity_bproposal_detail.xml
@@ -99,6 +99,14 @@
                 android:textColor="#000"
                 android:id="@+id/reject"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PAY"
+                android:textSize="18dp"
+                android:textColor="#000"
+                android:id="@+id/pay"/>
+
 
         </LinearLayout>
     </ScrollView>
